Fixed overflow of sidebar and main content for header section

--- a/style.css
+++ b/style.css
@@ -44,14 +44,14 @@ h2 {
 }
 
 .main {
-	padding-top: 170px;
-	padding-bottom: 50px;
+	bottom: 20%;
 	width: 70%;
 	position: absolute;
 	left: 0;
 	right: 0;
 	margin: 0 auto;
 	z-index: 99;
+	overflow: auto;
 }
 
 .main > div > img {
@@ -102,6 +102,7 @@ h2 {
 	z-index: 99;
 	margin: 0 auto;
 	height: 100%;
+	overflow: auto;
 }
 
 .mini-sidebar {
